2010-06-17  Josep Joan Ribas  <jribas@flumotion.com>

	* flumotion/test/test_wizard_save.py:
	Fix tests.

2010-06-17  Josep Joan Ribas  <jribas@flumotion.com>

	reviewed by: Julien Le Goff

	* data/glade/Makefile.am:
	* data/glade/consumption-wizard.glade:
	* flumotion/admin/assistant/interfaces.py:
	* flumotion/common/registry.py:
	* flumotion/component/consumers/disker/Makefile.am:
	* flumotion/component/consumers/disker/disker.xml:
	* flumotion/component/consumers/httpstreamer/Makefile.am:
	* flumotion/component/consumers/httpstreamer/httpstreamer.xml:
	* flumotion/component/consumers/shout2/Makefile.am:
	* flumotion/component/consumers/shout2/shout2.xml:
	* flumotion/scenario/steps/Makefile.am:
	* flumotion/scenario/steps/steps.xml:
	* flumotion/component/consumers/disker/wizard.glade (added):
	* flumotion/component/consumers/disker/wizard_gtk.py (added):
	* flumotion/component/consumers/httpstreamer/wizard.glade (added):
	* flumotion/component/consumers/httpstreamer/wizard_gtk.py (added):
	* flumotion/component/consumers/shout2/wizard.glade (added):
	* flumotion/component/consumers/shout2/wizard_gtk.py (added):
	* data/glade/disker-wizard.glade (deleted):
	* data/glade/shout2-wizard.glade (deleted):
	* data/glade/httpstreamer-wizard.glade (deleted):
	* flumotion/scenario/steps/diskersteps.py (deleted):
	* flumotion/scenario/steps/httpstreamersteps.py (deleted):
	* flumotion/scenario/steps/shout2steps.py (deleted):
	Move consumption steps (httpstreamer, shout2 and disker) to the component
	bundles they belong to. See #1297
	* flumotion/scenario/steps/consumptionsteps.py:
	* flumotion/scenario/steps/conversionsteps.py:
	Load consumption steps dynamically from the bundles.

2010-06-16  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/component/decoders/generic/generic.py:
	Set a empty list as default blacklist

2010-06-14  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Jan Urbanski
	* flumotion/monitor/nagios/stream.py: